Polish record filtering validation and summaries
Co-authored-by: chicoreus <3864169+chicoreus@users.noreply.github.com>